[package]
name = "mock_json"
version = "0.1.4"
edition = "2021"
authors = ["flyinsky <flyinksy@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["mock", "json"]
description = "A very simple mock json tool"
repository = "https://github.com/zjhsd2007/mock_json"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = "0.8"
once_cell = "1.7"
